polish layout header

--- a/index.html
+++ b/index.html
@@ -47,13 +47,16 @@
                     <input type="text" placeholder="Search">
                 </div>
                 <div>
-                    <p>alarm-icon</p>
-                    <p class="logo">logo</p>
+                    <span class="material-symbols-outlined">notifications</span>
+                    <span class="material-symbols-outlined">timelapse</span>
                     <p>Morgan Oakley</p>
                 </div>
             </div>
             <div class="buttons">
-                <p class="logo">Logo Hi there,<br> Morgan Oakley (@morgan)</p>
+                <div class="biglogo">
+                    <span class="material-symbols-outlined logo">timelapse</span>
+                    <p>Hi there,<br> Morgan Oakley (@morgan)</p>
+                </div>
                 <button class="new">New</button>
                 <button class="upload">Upload</button>
                 <button class="share">Share</button>
